# mlops-assignment

./: .gitignore  pyproject.toml
agent/: graph.py  prompts.py  server.py
evals/: run_eval.py
infra/grafana/provisioning/dashboards/: serving.json
results/: eval_baseline.json  load_test.json
scripts/: fire_questions.py  start_vllm.sh
