[project]
name = "mlops-assignment"
version = "0.1.0"
description = "MLOps home assignment: LLM inference + observability"
requires-python = ">=3.11"
dependencies = [
    # Serving
    "vllm>=0.9.0,<0.11",
    # vLLM 0.10.x targets the transformers 4.x tokenizer API; transformers 5.0
    # dropped Qwen2Tokenizer.all_special_tokens_extended, which vLLM still reads.
    # Cap below 5 so uv can't resolve a v5 that breaks tokenizer init at startup.
    "transformers>=4.55.2,<5",
    # Agent (major-version bounded; uv.lock pins exactly)
    "langgraph>=1.0,<2.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langfuse>=4.0,<5.0",
    # Server wrapper
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    # Data + utilities
    "datasets>=2.20",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "aiohttp>=3.9,<4.0",
    "tqdm>=4.66,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "evals", "load_test"]
